--- a/TSOSConfig/TSOSConfig.csproj
+++ b/TSOSConfig/TSOSConfig.csproj
@@ -36,14 +36,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GalaSoft.MvvmLight, Version=5.3.0.19038, Culture=neutral, PublicKeyToken=0e453835af4ee6ce, processorArchitecture=MSIL">
-      <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\net40\GalaSoft.MvvmLight.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="GalaSoft.MvvmLight.Extras, Version=5.3.0.19026, Culture=neutral, PublicKeyToken=f46ff315b1088208, processorArchitecture=MSIL">
-      <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\net40\GalaSoft.MvvmLight.Extras.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
@@ -95,6 +87,8 @@
     <Compile Include="HelperClasses\Converters\TextToEnabledConverter.cs" />
     <Compile Include="HelperClasses\Converters\SelectionToEnabledConverter.cs" />
     <Compile Include="HelperClasses\Observable.cs" />
+    <Compile Include="HelperClasses\RelayCommand.cs" />
+    <Compile Include="HelperClasses\Validations\ConnectionStringValidation.cs" />
     <Compile Include="HelperClasses\Validations\CustomerNameValidation.cs" />
     <Compile Include="HelperClasses\Validations\DatabaseNameValidation.cs" />
     <Compile Include="HelperClasses\Validations\MailServerValidation.cs" />
